<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/email_id"
            android:text="nik"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/edittextcolor"
            android:id="@+id/edittext_email"
            android:textSize="15sp"
            android:textStyle="bold" />


            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
                android:text="pooi"
            android:id="@+id/edittext_password"
            android:inputType="textPassword"
            android:textSize="15sp"
                android:backgroundTint="@color/edittextcolor"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/textview_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/btn_bg"
        android:drawablePadding="4dp"
        android:textAllCaps="false"
        android:text="Sign In"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="20dp"
        android:paddingBottom="5dp"
        android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="15dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/textview_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:padding="5dp"
            android:id="@+id/textview_account"
            android:text="Don't have account "
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>